Fix Flexbox styling

--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="menu">
-        <div class="option"><a href="#news">File</a></div>
-        <div class="option"><a href="#news">View</a></div>
-        <div class="option"><a href="#news">Setting</a></div>
-        <div class="option"><a href="#news">Help</a></div>
+          <div class="menu">
+            <div class="option"><a href="#news">File</a></div>
+            <div class="option"><a href="#news">View</a></div>
+            <div class="option"><a href="#news">Setting</a></div>
+            <div class="option"><a href="#news">Help</a></div>
+        </div>
+    <div class="container">
+
+        <div class="graph-display">
+            <p>Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
+        </div>
+        <div class="data-selection">   
+            <p>Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply </p>
+        </div>
     </div>
 </body>
 </html>
