Fix CSS code and format code

--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Data Visualizations</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-          <div class="menu">
-            <div class="option"><a href="#news">File</a></div>
-            <div class="option"><a href="#news">View</a></div>
-            <div class="option"><a href="#news">Setting</a></div>
-            <div class="option"><a href="#news">Help</a></div>
-        </div>
-    <div class="container">
-
-        <div class="graph-display">
-            <p>Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
+    <div class="menu">
+        <div class="option"><a href="#news">File</a></div>
+        <div class="option"><a href="#news">View</a></div>
+        <div class="option"><a href="#news">Setting</a></div>
+        <div class="option"><a href="#news">Help</a></div>
+    </div>
+    <div class="container">     <!-- Nested Flex Conatianer --> 
+        <div class ="container2">
+            <div class="graph-display">
+                <p>Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
+            </div>
+            <div class="message">
+                <p>Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
+            </div>
         </div>
         <div class="data-selection">   
             <p>Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply </p>
