--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Data Visualizations</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> <!-- Font Family-->
+    <script src="https://d3js.org/d3.v5.min.js"></script> <!-- D3.js -->
 </head>
 <body>
     <div class="menu">
