--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> <!-- Font Family-->
     <script src="https://d3js.org/d3.v5.min.js"></script> <!-- D3.js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    <!-- Add JQuery -->
+    <script src="utilities.js" defer></script>  <!-- Add Own Js Source Code -->
 </head>
 <body>
     <div class="menu">
         <div class="dropdown" style="float:left;">
             <button class="dropbtn">File</button>
             <div class="dropdown-content" style="left:0;">
-                <a href="#">Load CSV File</a>
+                <a id="loadFile" href="javascript:void(0);">
+                    Load CSV File
+                    <input type="file"
+                    id="loadcsv" name="csvFile"
+                    accept=".csv" hidden/>
+                </a>
                 <a href="#">Login to DB</a>
                 <a href="#">Logout DB</a>
                 <a href="#">Exit</a>
