--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a id="loadFile" href="javascript:void(0);">
                     Load CSV File
                     <input type="file"
-                    id="loadcsv" name="csvFile"
+                    id="loadcsv"
                     accept=".csv" hidden/>
                 </a>
                 <a href="#">Login to DB</a>
