Add on change event listner, to wait for file upload

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="dropdown" style="float:left;">
             <button class="dropbtn">File</button>
             <div class="dropdown-content" style="left:0;">
-                <a id="loadFile" href="javascript:void(0);">
+                <a id="loadFileBtn" href="javascript:void(0);">
                     Load CSV File
                     <input type="file"
-                    id="loadcsv"
+                    id="loadFile"
                     accept=".csv" hidden/>
                 </a>
                 <a href="#">Login to DB</a>
