Add jquery-csv library

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> <!-- Font Family-->
     <script src="https://d3js.org/d3.v5.min.js"></script> <!-- D3.js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    <!-- Add JQuery -->
-    <script src="utilities.js" defer></script>  <!-- Add Own Js Source Code -->
+    <script src="src/jquery-csv.js"></script>   <!-- Add JQuery CSV library -->
+    <script src="src/utilities.js" defer></script>  <!-- Add Own Js Source Code -->
 </head>
 <body>
     <div class="menu">
