Add id to message element

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">     
         <div class ="container2">   <!-- Nested Flex Conatianer --> 
             <div class="graph-display">
-                <p>Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
+                <p id="graph-display-msg">Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
             </div>
             <div class="message">
                 <p>Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
