--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script> <!-- D3.js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    <!-- Add JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.js"></script>   <!-- Add Papa Parse library -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>     <!-- Add Google Charts library -->
     <script src="src/utilities.js" defer></script>  <!-- Add Own Js Source Code -->
 </head>
 <body>
