--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Data Visualizations</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> <!-- Font Family-->
-    <script src="https://d3js.org/d3.v5.min.js"></script> <!-- D3.js -->
+    <script src="https://www.gstatic.com/charts/loader.js"></script>     <!-- Add Google Charts library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    <!-- Add JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.js"></script>   <!-- Add Papa Parse library -->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>     <!-- Add Google Charts library -->
     <script src="src/utilities.js" defer></script>  <!-- Add Own Js Source Code -->
 </head>
 <body>
@@ -54,7 +53,7 @@
     </div>
     <div class="container">     
         <div class ="container2">   <!-- Nested Flex Conatianer --> 
-            <div class="graph-display">
+            <div class="graph-display" id="graph-display">
                 <p id="graph-display-msg">Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
             </div>
             <div class="message">
