Change folder name to js and add loginbtn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://www.gstatic.com/charts/loader.js"></script>     <!-- Add Google Charts library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    <!-- Add JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.js"></script>   <!-- Add Papa Parse library -->
-    <script src="src/utilities.js" defer></script>  <!-- Add Own Js Source Code -->
+    <script src="js/utilities.js" defer></script>  <!-- Add Own Js Source Code -->
 </head>
 <body>
     <div class="menu">
@@ -23,7 +23,7 @@
                     id="loadFile"
                     accept=".csv" hidden/>
                 </a>
-                <a href="#">Login to DB</a>
+                <a id="loginBtn" href="javascript:void(0);">Login to DB</a>
                 <a href="#">Logout DB</a>
                 <a href="#">Exit</a>
             </div>
