--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://www.gstatic.com/charts/loader.js"></script>     <!-- Add Google Charts library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    <!-- Add JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.js"></script>   <!-- Add Papa Parse library -->
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>   <!-- Add JS Cookie -->
     <script src="js/utilities.js" defer></script>  <!-- Add Own Js Source Code -->
 </head>
 <body>
@@ -53,15 +54,15 @@
     </div>
     <div class="container">     
         <div class ="container2">   <!-- Nested Flex Conatianer --> 
-            <div class="graph-display" id="graph-display">
+            <div class="graph-display">
                 <p id="graph-display-msg">Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
             </div>
-            <div class="message">
+            <div class="message" id="table-display">
                 <p>Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
             </div>
         </div>
         <div class="data-selection">   
-            <p>Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply Lorem Ipsum is simply </p>
+            <p id="welcome-msg"></p>
         </div>
     </div>
 
