Add logout functionality and messages for login

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     accept=".csv" hidden/>
                 </a>
                 <a id="loginBtn" href="javascript:void(0);">Login to DB</a>
-                <a href="#">Logout DB</a>
+                <a id="logoutBtn" href="javascript:void(0);">Logout DB</a>
                 <a href="#">Exit</a>
             </div>
         </div>
