Fix CSS Styling

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
           </div>
       
           <div class="info-container">
-            <p><b>Kevin Tapia</b></p>
-            <p><b>CPS5745</b></p>
-            <p><b>Oct. 20th 2019</b></p>
+            <p>Kevin Tapia</p>
+            <p>CPS5745</p>
+            <p>Oct. 20th 2019</p>
               
             <button type="button" onclick="document.getElementById('infoModal').style.display='none'" class="cancelbtn">Close</button>
           </div>
