Add radio styling and check if selected

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div class ="container2">   <!-- Nested Flex Conatianer --> 
             <div class="graph-display">
                 <p id="graph-display-msg">Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
+                <div id="chart_div"></div>
             </div>
             <div class="message" id="table-display">
                 <p>Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
@@ -67,8 +68,8 @@
             
             <div id='choices'>
                 <input type='radio' id='AvgWages' name='choice' value='avgWages' checked> <b>AvgWages</b>(Bar, Line)</br>
-                <input type='radio' id='EstimatedPopulation' name='choice' value='estimatedPopulation'> EstimatedPopulation(Bar, Line)</br>
-                <input type='radio' id='State' name='choice' value='state'> State(Bar, Pie)</br>
+                <input type='radio' id='EstimatedPopulation' name='choice' value='estimatedPopulation'> <b>EstimatedPopulation</b>(Bar, Line)</br>
+                <input type='radio' id='State' name='choice' value='state'> <b>State</b>(Bar, Pie)</br>
 
                 <p id="description">Please select one of the following choice, and then run one of the graph in the View menu.</br>
                     <b>Note:</b> The empty, NULL or NaN value will be excluded</p>
