--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <div class="container">     
         <div class ="container2">   <!-- Nested Flex Conatianer --> 
             <div class="graph-display">
-                <p id="graph-display-msg">Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
-                <div id="chart_div"></div>
+                <p id="graph-display-msg"></p>
+                <div id="chart-div"></div>
             </div>
             <div class="message" id="table-display">
                 <p>Lorem Ipsum is simply dummy Lorem Ipsum is simply Lorem Ipsum is simply </p>
