--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="dropdown-content" style="left:0;">
                 <a id="lineBtn" href="javascript:void(0);">Line</a>
                 <a href="#">Pie</a>
-                <a href="#">Bar</a>
+                <a id="barBtn" href="javascript:void(0);">Bar</a>
                 <a href="#">Map</a>
             </div>
         </div>
