--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="dropbtn">View</button>
             <div class="dropdown-content" style="left:0;">
                 <a id="lineBtn" href="javascript:void(0);">Line</a>
-                <a href="#">Pie</a>
+                <a id="pieBtn" href="javascript:void(0);">Pie</a>
                 <a id="barBtn" href="javascript:void(0);">Bar</a>
                 <a href="#">Map</a>
             </div>
