Add Exit function to clear memory

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="exit-container">
                 <p>Are you sure you want to exit?</p>
                 
-                <button type="button" onclick="document.getElementById('exitModal').style.display='none'" class="cancelbtn">Yes</button>
+                <button type="button" id="exit" onclick="document.getElementById('exitModal').style.display='none'" class="cancelbtn">Yes</button>
                 <button type="button" onclick="document.getElementById('exitModal').style.display='none'" class="cancelbtn">No</button>
             </div>
         </div>
